[package]
name = "klamm"
version = "0.1.0"
authors = ["Yury Liavitski <yury.liavitski@il111.ice.local>"]

[dependencies]
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"
serde_json = "1.0"
chrono = "0.4"
error-chain = "0.11"
reqwest = "0.8"
termion = "*"
serde_derive = "*"
serde = "*"
argparse = "*"